Add login to API; authenticate using JWT
