# server/api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths
-basePath: /
+basePath: /api
 #
 schemes:
   # tip: remove http to make production-grade
@@ -17,13 +17,50 @@ consumes:
 # format of the responses to the client (Accepts)
 produces:
   - application/json
+
+securityDefinitions:
+  Bearer:
+    description: "For accessing the API a valid JWT token must be passed in all the queries in the 'Authorization' header. A valid JWT token is generated by the API and returned as answer of a call to the route /api/auth/login giving a valid user & password. The following syntax must be used in the 'Authorization' header: Bearer: xxxxxx.yyyyyyy.zzzzzz"
+    type: apiKey
+    name: Authorization
+    in: 'header'
+
 paths:
+  /auth/login:
+    x-swagger-router-controller: Auth
+    post:
+      description: Returns a valid web token to use with subsequent requests
+      operationId: 'login'
+      parameters:
+      - name: username
+        in: 'formData'
+        description: User name
+        required: true
+        type: string
+      - name: password
+        in: 'formData'
+        description: Password
+        required: true
+        type: string
+        format: password
+      responses:
+        "200":
+          description: Authentication Token
+          schema:
+            $ref: "#/definitions/Token"
+        default:
+          description: Unexpected error
+          schema:
+            $ref: "#/definitions/Error"
+
   /resources:
     x-swagger-router-controller: Resource
     get:
+      security:
+      - Bearer: []
       description: Returns a paginated list of books, articles and/or quotes that users have read sorted by their modification date by default (unless a tag filter is specified)
       # used as the method name of the controller
-      operationId: "getAll"
+      operationId: 'getAll'
       parameters:
         - name: filter
           in: query
@@ -97,7 +134,7 @@ paths:
         schema:
             $ref: "#/definitions/Resource"
       responses:
-        "200":
+        "201":
           description: "Literary resource updated"
           schema:
             $ref: "#/definitions/Resource"
@@ -152,6 +189,20 @@ paths:
 
 # complex objects have schema definitions
 definitions:
+
+  Error:
+    type: object
+    required:
+    - message
+    - code
+    properties:
+      message:
+        type: string
+      code:
+        type: integer
+        minimum: 100
+        maximum: 600
+
   Resource:
     type: "object"
     properties:
@@ -176,15 +227,9 @@ definitions:
           type: "string"
         }
         description: "List of IDs of all the users that have read this literary work"
-  Error:
+
+  Token:
     type: object
-    required:
-    - message
-    - code
     properties:
-      message:
-        type: string
-      code:
-        type: integer
-        minimum: 100
-        maximum: 600
+     token:
+      type: string
